# arena360

./: .cursorignore  .dockerignore  .gitignore  .npmrc  README.md  biome.json  docker-compose.yml  package.json  plans.csv  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json  users_202606150529.csv
apps/backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  package.json
apps/backend/docs/: openapi.json
apps/backend/migrations/: 20260526000000_typeorm_baseline.sql  20260527000001_add_audit_columns.sql  20260527000002_create_shifts.sql  20260527000003_create_cash_registers.sql  20260527000004_create_expense_management.sql  20260527000005_create_configurations.sql  20260527000007_add_totp_and_deposits.sql  20260527000010_add_shift_to_transactions_sessions.sql  20260528000001_drop_games_device_games_files.sql  20260528000002_create_transaction_products.sql  20260528000004_create_realtime_outbox.down.sql  20260528000004_create_realtime_outbox.sql  20260529000001_create_player_plan_balances.down.sql  20260529000001_create_player_plan_balances.sql  20260529000002_fix_session_playerplanid_and_txn_products.sql  20260529000003_simplify_plans_table.sql  20260530000001_add_player_credit.down.sql  20260530000001_add_player_credit.sql  20260530000002_add_transaction_products_audit_columns.down.sql  20260530000002_add_transaction_products_audit_columns.sql  20260530000003_sync_transaction_products_legacy_price_columns.down.sql  20260530000003_sync_transaction_products_legacy_price_columns.sql  20260530000004_device_registration_codes.sql  20260530000005_games_catalog.down.sql  20260530000005_games_catalog.sql  20260606000001_inventory_locations_and_stock.down.sql  20260606000001_inventory_locations_and_stock.sql  20260607000001_dynamic_plan_deduction.down.sql  20260607000001_dynamic_plan_deduction.sql  20260611000001_sso_tokens.sql  20260614224008_reset_database_seed_superadmin.down.sql  20260614224008_reset_database_seed_superadmin.up.sql  20260614225431_drop_devices_serial_unique.down.sql  20260614225431_drop_devices_serial_unique.up.sql  20260615000001_seed_canonical_units.down.sql  20260615000001_seed_canonical_units.sql  20260616000001_stock_adjustments.down.sql  20260616000001_stock_adjustments.sql  20260620000001_pg_trgm_search_indexes.down.sql  20260620000001_pg_trgm_search_indexes.sql  (+17 more)
apps/backend/scripts/: import-plan-balances.mjs  list-db-enums.mjs
apps/backend/src/: app.rs  lib.rs  main.rs  validation.rs
apps/backend/src/cache/: keys.rs  mod.rs
apps/backend/src/config/: database.rs  mod.rs  settings.rs
apps/backend/src/dto/: auth_dto.rs  envelope.rs  inventory_dto.rs  kiosk_dto.rs  mod.rs  pagination.rs
apps/backend/src/error/: app_error.rs
apps/backend/src/handlers/: auth.rs  balances.rs  cash_deposits.rs  cash_registers.rs  config.rs  console_tv.rs  credit.rs  device_games.rs  devices.rs  expense_categories.rs  expenses.rs  files.rs  games.rs  health.rs  inventory.rs  kiosk.rs  kiosk_orders.rs  mod.rs  notifications.rs  plans.rs  player_plans.rs  products.rs  realtime_rooms.rs  sessions.rs  shifts.rs  sse.rs  staff_gaming_allowance.rs  stats.rs  storage.rs  transactions.rs  units.rs  uploads.rs  users.rs  vendors.rs
apps/backend/src/middleware/: auth.rs  mod.rs
apps/backend/src/models/: balance.rs  cash_deposit.rs  cash_register.rs  configuration.rs  credit.rs  db_enums.rs  deduction_profile.rs  device.rs  device_game.rs  expense.rs  expense_category.rs  file.rs  game.rs  inventory_location.rs  kiosk_order.rs  ledger.rs  location_stock.rs  mod.rs  notification.rs  plan.rs  player_plan.rs  product.rs  session.rs  shift.rs  staff_gaming_allowance.rs  stock_adjustment.rs  unit.rs  (+7 more)
apps/backend/tests/: admin_shift_policy.rs  balance_cache_invalidation.rs  balance_validation.rs  cash_register_carry_forward.rs  credit_settlements.rs  credit_validation.rs  db_enum_validation.rs  device_enum_validation.rs  kiosk_orders.rs  kiosk_player_register.rs  kiosk_session_flow.rs  notifications.rs  player_auth_login.rs  realtime_acl.rs  realtime_frames.rs  session_balance_fk.rs  session_cache.rs  session_login_balance_snapshot.rs  staff_gaming_allowance.rs  staff_shift_auth.rs  stats_cache.rs  user_cache.rs
apps/kiosk/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
apps/kiosk/watchdog/: Cargo.toml
apps/kiosk/watchdog-common/: Cargo.toml
(+708 files in other folders)
