[package]
name = "gaming-cafe-api"
version = "0.1.0"
edition = "2021"
authors = ["Gaming Cafe Team"]
description = "Gaming cafe management API - Rust Axum + SQLx backend"
default-run = "gaming-cafe-api"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
bcrypt = "0.16"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"

# Streaming
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

# External services
reqwest = { version = "0.12", features = ["json"] }

[[bin]]
name = "openapi-gen"
path = "src/bin/openapi_gen.rs"

[dev-dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
tokio-test = "0.4"
