[package]
name = "kiosk"
version = "4.0.4"
description = "Gaming Cafe in-cafe kiosk (Tauri 2)"
authors = ["Gaming Cafe"]
edition = "2021"
default-run = "kiosk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kiosk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "kiosk"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
# Native OS file-open dialog for the setup allow-list editor (browse for an
# executable). Within the ADR-0019/0020 allow-list feature boundary.
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Asset caching downloads (DRAFT-0022). rustls avoids a system OpenSSL dependency.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Auto-update manager (ADR-0028). Desktop-only: the updater + process plugins are
# not built for mobile targets.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[target.'cfg(windows)'.dependencies]
sysinfo = "0.33"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_Security",
  "Win32_System_Com",
  "Win32_System_LibraryLoader",
  "Win32_System_RemoteDesktop",
  "Win32_System_Power",
  "Win32_System_Shutdown",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
