[package]
name = "watchdog-common"
version = "0.1.0"
edition = "2021"
description = "Shared pause-file IPC for Arena360 kiosk watchdog (ADR-0048)"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
