[package]
name = "arena360-watchdog"
version = "0.1.0"
edition = "2021"
description = "Arena360 kiosk watchdog sidecar (ADR-0048)"

[[bin]]
name = "arena360-watchdog"
path = "src/main.rs"

[dependencies]
watchdog-common = { path = "../watchdog-common" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
] }
